src/objects/Marketing_Cloud_API_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Url__c</fullName>
        <label>API_Url__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adhoc_Device_Key__c</fullName>
        <description>Defines event definition key for triggering debit memo.</description>
        <label>Adhoc Device Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category_Id__c</fullName>
        <description>Marketing cloud folder Id.</description>
        <label>Category Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Definition_Key__c</fullName>
        <description>Stores marketing cloud event definition key.</description>
        <label>Event Definition Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Cloud API Configuration</label>
    <pluralLabel>Marketing Cloud API Configurations</pluralLabel>
</CustomObject>